# personal-context7

./: .dockerignore  .gitignore  Dockerfile  README.md  deploy.sh  docker-entrypoint.sh  pyproject.toml  railway.json
docs/: AGENT_INTEGRATION.md  BRAINTRUST.md  EVALS.md  MCP_TOOLS.md  OBSIDIAN_SETUP.md  OPERATION_RUNBOOK.md  PRODUCTION_USAGE.md  QDRANT_OPERATION.md  SCALE_PLAN.md  TEMPLATE.md  VOCAB.example.json
evals/: pkb-smoke.jsonl  questions.example.jsonl  wiki-eval-dataset.jsonl
skills/personal-context7-pkb/: SKILL.md
skills/personal-context7-pkb/agents/: openai.yaml
src/pkb/: __init__.py  braintrust_obs.py  chunker.py  cli.py  config.py  doctor.py  embed.py  evals.py  healthcheck.py  http_app.py  indexer.py  ingest.py  mcp_server.py  qdrant_store.py  retriever.py  stats.py  store.py  sync.py
