[project]
name = "pkb"
version = "0.1.0"
description = "Personal Context7 — hybrid-retrieval MCP server over your markdown KB"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "sqlite-vec>=0.1.6",
    "fastembed>=0.4.2",
    "markdown-it-py>=3.0.0",
    "python-frontmatter>=1.1.0",
    "tiktoken>=0.8.0",
    "pydantic>=2.9.0",
    "typer>=0.12.5",
    "rich>=13.9.0",
    "watchfiles>=0.24.0",
    "starlette>=0.40.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
rerank = ["fastembed[gpu]>=0.4.2"]  # use the fastembed rerankers; same lib

[project.scripts]
pkb = "pkb.cli:app"
pkb-mcp = "pkb.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pkb"]

[tool.ruff]
line-length = 100
target-version = "py311"
